--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hello, Rollup!</title>
   <link rel="stylesheet" href="./dist/main.css">
+  <base href="/">
 </head>
 <body class="bg-body">
   <app-root id="app"></app-root>
