fix cdk,mat usage.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hello, Rollup!</title>
   <link rel="stylesheet" href="./dist/main.css">
+  <link rel="stylesheet" href="./dist/libs/@angular/material/prebuilt-themes/indigo-pink.css">
   <base href="/">
 </head>
 <body class="bg-body">
