--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hello, Rollup!</title>
   <link rel="stylesheet" href="./dist/main.css">
-  <link rel="stylesheet" href="./dist/libs/@angular/material/prebuilt-themes/indigo-pink.css">
+  <link rel="stylesheet" href="http://localhost/dist/libs/ng-zorro-antd/ng-zorro-antd.min.css">
 </head>
 <body class="bg-body">
   <app-root id="app">
