--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Hello, Rollup!</title>
   <link rel="stylesheet" href="./dist/styles/main.css">
-  <link rel="stylesheet" href="./dist/app.css">
+  <link rel="stylesheet" href="./dist/main.css">
 </head>
 <body>
-  <div id="app">
+  <app-root id="app">
     <div class="loading-indicator">
       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-clockwise bi-spin" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
@@ -17,7 +17,7 @@
       </svg>
       Loading ...
     </div>
-  </div>
+  </app-root>
   <script src="http://localhost/dist/loader.js"></script>
   <script>
   loadScripts([
